# tutorials

./: README.md  primes.c
bash/: README.md
bash/command_line_options/: example_getopts.sh
bash/command_line_options/tests/: test_options.sh
bash/concepts/: command_line_args.sh  functions.sh  if_case.sh  regex.sh  variables.sh
bash/concepts/loops/: loops.sh  states.txt
bash/concepts/redirection/: .gitignore  input_file.txt  redirection.sh
bash/concepts/sourcing/: child_shell.sh  sourcing.sh
cmake/: .gitignore  CMakeLists.txt  README.md
cmake/include/: header.h
cmake/math/: CMakeLists.txt  math.cpp
cmake/math/include/: math.h
cmake/src/: tutorial.cpp
embedded/: README.md
embedded/minimal/: .gitignore  Makefile  core.s  debug.gdb  link.ld  openocd.cfg
embedded/minimal/kernel/: common_asm.S  startup.S  vector_table.S
embedded/minimal/mde/: AP_FuncionesMDE.c  AP_FuncionesMDE.h  AP_Inicializacion.c  AP_Inicializacion.h  AP_MDE.c  AP_MDE.h  main.c
gdb/: README.MD  README.md  a.out  script.gdb
gtest/: CMakeLists.txt  README.md
gtest/include/: functions.h
gtest/src/: functions.cpp
gtest/tests/: test.cpp
makefile/: Makefile  README.md
makefile/inc/: a.h  main.h
makefile/inc/sub_inc/: b.h
makefile/src/: a.c  main.c
makefile/src/sub_src/: b.c
